--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-h5-audio-player": "3.2.0",
     "react-jss": "10.1.1",
     "semantic-ui-react": "0.81.2"
   }
