--- a/package.json
+++ b/package.json
@@ -44,13 +44,12 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "bootswatch": "4.5.1",
     "green-audio-player": "1.1.2",
     "jss-plugin-nested": "10.1.1",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-h5-audio-player": "3.2.0",
-    "react-jss": "10.1.1",
-    "semantic-ui-react": "0.81.2"
+    "react-jss": "10.1.1"
   }
 }
